--- a/WebAppProjeto01G1/WebAppProjeto01G1/Areas/Seguranca/Views/Admin/Delete.cshtml
+++ b/WebAppProjeto01G1/WebAppProjeto01G1/Areas/Seguranca/Views/Admin/Delete.cshtml
@@ -15,11 +15,7 @@
                     <i class="glyphicon glyphicon-user"></i>
                 </span>
                 @Html.EditorFor(model => model.Id, new
-                {
-                    htmlAttributes =
-                new { @class = "form-control", disabled = "disabled" }
-                })
-
+                { htmlAttributes = new { @class = "form-control", disabled = "disabled" } })
             </div>
         </div>
         <div class="form-group">
@@ -29,11 +25,7 @@
                     <i class="glyphicon glyphicon-user"></i>
                 </span>
                 @Html.EditorFor(model => model.UserName, new
-                {
-                    htmlAttributes =
-                new { @class = "form-control", disabled = "disabled" }
-                })
-
+                { htmlAttributes = new { @class = "form-control", disabled = "disabled" } })
             </div>
         </div>
         <div class="form-group">
@@ -43,19 +35,13 @@
                     <i class="glyphicon glyphicon-user"></i>
                 </span>
                 @Html.EditorFor(model => model.Email, new
-                {
-                    htmlAttributes =
-                new { @class = "form-control", disabled = "disabled" }
-                })
-
+                { htmlAttributes = new { @class = "form-control", disabled = "disabled" } })
             </div>
         </div>
     </div>
     <div class="panel-footer panel-info">
-        <a href="#" class="btn btn-info" data-toggle="modal"
-           data-target="#deleteConfirmationModal">Remover</a>
-        @Html.ActionLink("Retornar para a listagem", "Index", null,
-        new { @class = "btn btn-info" })
+        <a href="#" class="btn btn-info" data-toggle="modal" data-target="#deleteConfirmationModal">Remover</a>
+        @Html.ActionLink("Retornar para a listagem", "Index", null, new { @class = "btn btn-info" })
     </div>
 </div>
 <div class="modal fade" id="deleteConfirmationModal" tabindex="-1"
@@ -73,7 +59,7 @@
             </div>
             <div class="modal-body">
                 <p>
-                    Você está prestes a remover o usuário @Model.Id.ToUpper()
+                    Você está prestes a remover o usuário @Model.UserName.ToUpper()
                     do cadastro.
                 </p>
                 <p>
@@ -81,20 +67,17 @@
                         Você está certo que deseja prosseguir?
                     </strong>
                 </p>
-                @using (Html.BeginForm("Delete", "Admin", FormMethod.Post,
-                new { @id = "delete-form", role = "form" }))
+                @using (Html.BeginForm("Delete", "Admin", FormMethod.Post, new { @id = "delete-form", role = "form" }))
                 {
                     @Html.HiddenFor(m => m.Id)
                     @Html.AntiForgeryToken()
                 }
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-default"
-                        onclick="$('#delete-form').submit();">
+                <button type="button" class="btn btn-default" onclick="$('#delete-form').submit();">
                     Sim, exclua este usuário.
                 </button>
-                <button type="button" class="btn btn-primary"
-                        data-dismiss="modal">
+                <button type="button" class="btn btn-primary" data-dismiss="modal">
                     Não, não exclua este usuário.
                 </button>
             </div>
