--- a/WebAppProjeto01G1/WebAppProjeto01G1/Areas/Seguranca/Views/Admin/Details.cshtml
+++ b/WebAppProjeto01G1/WebAppProjeto01G1/Areas/Seguranca/Views/Admin/Details.cshtml
@@ -15,11 +15,7 @@
                     <i class="glyphicon glyphicon-user"></i>
                 </span>
                 @Html.EditorFor(model => model.Id, new
-                {
-                    htmlAttributes =
-                new { @class = "form-control", disabled = "disabled" }
-                })
-
+                { htmlAttributes = new { @class = "form-control", disabled = "disabled" } })
             </div>
         </div>
         <div class="form-group">
@@ -29,11 +25,7 @@
                     <i class="glyphicon glyphicon-user"></i>
                 </span>
                 @Html.EditorFor(model => model.UserName, new
-                {
-                    htmlAttributes =
-                new { @class = "form-control", disabled = "disabled" }
-                })
-
+                { htmlAttributes = new { @class = "form-control", disabled = "disabled" } })
             </div>
         </div>
         <div class="form-group">
@@ -43,24 +35,14 @@
                     <i class="glyphicon glyphicon-user"></i>
                 </span>
                 @Html.EditorFor(model => model.Email, new
-                {
-                    htmlAttributes =
-                new { @class = "form-control", disabled = "disabled" }
-                })
-
+                { htmlAttributes = new { @class = "form-control", disabled = "disabled" } })
             </div>
         </div>
     </div>
     <div class="panel-footer panel-info">
-        @using (Html.BeginForm())
-        {
-            @Html.ActionLink("Alterar", "Edit", new { id = Model.Id }, new { @class = "btn btn-info" })
-            @Html.ActionLink("Retornar para a listagem", "Index", null,
-            new { @class = "btn btn-info" })
-        }
+        @Html.ActionLink("Retornar para a listagem", "Index", null, new { @class = "btn btn-info" })
     </div>
 </div>
-
 @section ScriptPage {
     <script type="text/javascript">
         $(document).ready(function () {
